--- a/A4_HW.ipynb
+++ b/A4_HW.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "8d10da6a",
+   "execution_count": 1,
+   "id": "ee048523",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn.datasets import make_spd_matrix\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from scipy import linalg"
+    "from scipy import linalg\n",
+    "from IPython.display import Latex"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd882abf",
+   "id": "d607e744",
    "metadata": {},
    "source": [
     "## Задача 1"
@@ -25,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "e420ff60",
+   "id": "906278ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "e52c8a22",
+   "id": "203604bb",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "fa813d1e",
+   "id": "febb831f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "a320ddc0",
+   "id": "d993a8f7",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "d93d1f3a",
+   "id": "ba0ec980",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "id": "c5232745",
+   "id": "89f776e8",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "6c9ad1e9",
+   "id": "fec80a5e",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c2e5893",
+   "id": "3a06a462",
    "metadata": {},
    "source": [
     "## Задача 2"
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d453bbb",
+   "id": "bdba9f2c",
    "metadata": {},
    "source": [
     "Будем понимать $\\tilde{\\Lambda}$ как $\\operatorname{diag}\\{\\lambda_1, \\dots, \\lambda_{\\tilde{F}}, 0, \\dots, 0\\}$.\n",
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b34098c",
+   "id": "d0cce9bd",
    "metadata": {},
    "source": [
     "## Задача 3"
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e7400a",
+   "id": "6ff48e92",
    "metadata": {},
    "source": [
     "Пусть $\\mathbf{u} = \\operatorname{argmax}_{\\lVert \\mathbf{u} \\rVert = 1} (X \\mathbf{u})^2,$ обозначим $ (X \\mathbf{u})^2 = \\lambda_1$.\tТогда $X\\mathbf{u} = \\sqrt{\\lambda_1} \\mathbf{v}$.\n",
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10b11007",
+   "id": "d5cb8bbc",
    "metadata": {},
    "source": [
     "## Задача 4"
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eeeaa92",
+   "id": "7e83d65e",
    "metadata": {},
    "source": [
     "Рассмотрим вектора $\\mathbf{a}$ с единичной нормой. \n",
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a353ed",
+   "id": "db751752",
    "metadata": {},
    "source": [
     "## Задача 5"
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b376a4",
+   "id": "e0458212",
    "metadata": {},
    "source": [
     "Назовём вещи своими именами: $$\n",
@@ -291,16 +292,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8be2c720",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "8e6f8056",
+   "id": "3b7f5568",
    "metadata": {},
    "source": [
     "## Задача 6"
