--- a/A4_HW.ipynb
+++ b/A4_HW.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "красивый тех можно увидеть здесь: https://nbviewer.org/github/Alex2034/CompMath/blob/main/A4_HW.ipynb"
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn.datasets import make_spd_matrix\n",
