--- a/A4_HW.ipynb
+++ b/A4_HW.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "484788a2",
+   "metadata": {},
+   "source": [
+    "#### Версию с адекватным техом можно увидеть здесь: https://nbviewer.org/github/Alex2034/CompMath/blob/main/A4_HW.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ee048523",
